# jam0002

./: .gitignore  .gitmodules  README.md
DESTRUCTION/: Cargo.toml  README.md  TEAM  documentation.md  drawing_board.md
DESTRUCTION/examples/: factorial.ds  fibonacci.ds  greet.ds  sort.ds
DESTRUCTION/interpreter/: Cargo.toml
DESTRUCTION/parser/: Cargo.toml
DLJ2/Project/dupr/: CMakeLists.txt  main.cpp
DLJ2/Project/dupr/include/: deamer.cmake
DLJ2/Project/dupr/include/dupr/: dupr.h
DLJ2/Project/dupr/include/dupr/Ast/Enum/: Type.h
DLJ2/Project/dupr/include/dupr/Ast/Listener/: EnterExitListener.h  Listener.h
DLJ2/Project/dupr/include/dupr/Ast/Listener/User/: IRTranslator.h  IRTranslatorFunctionArguments.h  IRTranslatorFunctionStatements.h
DLJ2/Project/dupr/include/dupr/Ast/Node/: .h  GT.h  HEKJE.h  LE.h  WILDCARD_OP.h  deamerreserved_plus__pattern_execution_content_stmt__.h  deamerreserved_star__pattern_constructor_content_stmt__.h  pattern_constructor_nt_content.h  program.h
DLJ2/Project/dupr/include/dupr/Ast/Reference/: Access.h  CMakeLists.txt
DLJ2/Project/dupr/include/dupr/Ast/Relation/: NodeEnumToText.h  NodeEnumToType.h  NodeIsInlined.h  NodeIsNonTerminal.h  NodeIsTerminal.h  NodeTextToEnum.h  NodeTypeToEnum.h
DLJ2/Project/dupr/include/dupr/Ast/Visitor/: Visitor.h
DLJ2/Project/dupr/include/dupr/Ast/Visualisation/: Graph.h
DLJ2/Project/dupr/include/dupr/Bison/: Parser.h
DLJ2/Project/dupr/include/dupr/Generation/CPP/: Generator.h
DLJ2/Project/dupr/include/dupr/Generation/CPP/Templates/: CPP.dst  CPP.setting.dst  CPPTemplate.h  Statement.dst  Statement.setting.dst  StatementTemplate.h
DLJ2/Project/dupr/include/dupr/IR/: Argument.h  ConditionalIf.h  Expression.h  Function.h  ProgramOrder.h  ReturnStatement.h  Statement.h  Value.h  VariableAssignment.h  VariableDeclaration.h
DLJ2/Project/dupr/lib/: deamer.cmake
DLJ2/Project/dupr/lib/Ast/Listener/User/: IRTranslator.cpp  IRTranslatorFunctionArguments.cpp  IRTranslatorFunctionStatements.cpp
DLJ2/Project/dupr/sources/: CMakeLists.txt  deamer.cmake
DLJ2/Project/dupr/sources/DeamerDefaultApplication/Deamer/: CMakeLists.txt
DLJ2/Project/dupr/sources/DeamerDefaultApplication/Deamer/Compiler/: CMakeLists.txt
DLJ2/Project/dupr/sources/DeamerDefaultApplication/Deamer/TokenViewer/: CMakeLists.txt
DUPR/: .gitignore  README.md  TEAM  installer.py
DUPR/Project/: CMakeLists.txt  test.txt
DUPR/Project/CompilerGenerator/: CMakeLists.txt  main.cpp
DUPR/Project/CompilerGenerator/include/dupr/: CompilerGenerator.h  Grammar.h  Identity.h  Lexicon.h  Threat.h
Patty/: .gitignore  Makefile  README.md  TEAM
Patty/examples/: arithmetic.patty  count-down.patty  factorial.patty  (+6 more)
SeekWhence/: README.md  TEAM  seekwhence  seekwhence.bat  seekwhence.sublime-syntax  time_spent
Smile/: README.md  TEAM
SteamBoat/: README.md  TEAM  sb_interpreter.py  sb_langdef.py  sb_parser.py  sb_scanner.py  steamboat.py
agents/: Cargo.toml  README.md  TEAM
agents/src/: ast.rs  lib.rs  parser.rs
agents/src/tests/: mod.rs
agents/www/: index.html  index.js  package-lock.json  package.json  style.css  webpack.config.js
clock/: .gitignore  CMakeLists.txt  README.md  TEAM  factorial  fibonacci  main.cpp  patterns
creators_of_templ/: .gitignore  README.md  TEAM  classes_and_constants.md  compile_flags.txt  docs.md  idea_dump.txt  log.txt  main.c  makefile  todoer.txt
daemon/: Cargo.toml  README.md  TEAM
deerlang/: README.md  TEAM  deerlang.py  direction_help.py  requirements.txt  run_cell.py  tui.py
gtx/: Cargo.toml
guitarvydas/: #race.c#  .gitignore  DaisyChain.drawio  README.md  TEAM  app.pre  at-a-glance.drawio  basic.c  basic.pre  cexpr.ohm  cmm.glue  cmm.mac  cmm.ohm  cmmtest.ohm  consumer.c  consumer.cmm  consumer.cpre  consumer.h  cos.h  cpre.glue  cpre.ohm  d2f.bash  dev.bash  dispatch.c  dispatch.h  externs.h  f2j.bash  fb.json  fb.pl  identity-cpre.glue  kernel.c  kernel.h  list.c  list.h  main.c  main.cmm  mechanisms.pre  note.md  old-cmm.glue  old-cmm.ohm  (+22 more)
lang/: .gitignore  evaluator.py  irgen.py  lang.py  nodes.py  requirements.txt  run_cell.py  tui.py
likelang/: .gitignore  LICENSE  README.md  like.lark  like.py  requirements.txt  shell.nix
matcharoni_('n_cheese)/: .gitignore  Cargo.toml  README.md
matcharoni_('n_cheese)/examples/aoc2021/day3_matcharoni/: part1.roni  part2.roni
matcharoni_('n_cheese)/examples/aoc2021/day4_matcharoni/: input  part1.roni  part2.roni
matcharoni_('n_cheese)/examples/aoc2021/day5_matcharoni/: input  part1.roni
matcharoni_('n_cheese)/src/: interp.rs  main.rs  parser.rs
matcharoni_('n_cheese)/src/interp/: builtins.rs
matcharoni_('n_cheese)/syntax_highlighting/: roni.vim
mosaic/: .gitignore  Cargo.toml  README.md  cargo
mosaic/web/: .eslintrc.yml  .gitignore  Cargo.toml  bootstrap.ts  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
mosaic/web/src/: addGrout.ts  bsp.ts  constants.ts  examples.ts  geo.ts  getSymbolPolygon.ts  index.ts  lib.rs  tileObj.ts  voronoi.ts
motif/: .gitattributes  .gitignore  README.md  TEAM  motif  package-lock.json  package.json  time_used.txt  tsconfig.json
muncher/: Cargo.toml  readme.md
patatern/: .editorconfig  CHANGELOG.md  README.md  TEAM  cabal.project  example.pt  patatern.cabal  stdlib.pt
patatern/app/: Builtin.hs  Evaluate.hs  Instantiate.hs  Interpret.hs  Main.hs  Parser.hs  SyntaxTree.hs  Utils.hs
quilt/: Cargo.toml  Makefile  README.md  TEAM  commands.md
quilt/.github/workflows/: rust.yml
quilt/src/: condition.rs  hsl.rs  instruction.rs  lib.rs  main.rs  matrix.rs  parser.rs  pixel.rs  vm.rs
quilt/tests/: integration_test.rs
rematch/: Cargo.toml  README.md  TEAM  example.rm
rematch/src/: ast.rs  compile.rs  grammar.lalrpop  lib.rs  loc.rs  parser.rs  repl.rs
sand_dune/: README.md  TEAM  build_a_language.unseemly  rule_110_glider.sand_dune  rule_110_one_cell.sand_dune  rule_30.sand_dune  rule_62_tree.sand_dune  sand_dune.unseemly  wide_rule.sand_dune
squiggle/: README.md  TEAM  package-lock.json  package.json
wally/: .gitignore  Makefile  README.md  TEAM
(+483 files in other folders)
