[package]
name = "matcharoni"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gc = {version = "*", features = ["derive"]}
peg = { git = "https://github.com/kevinmehall/rust-peg.git" }
#peg = "*"
litrs = "*"
anyhow = "*"
itertools = "*"
dyn-clone = "*"
dyn_partial_eq = "*"

[profile.release]
# for flamegraph
debug = true
