cabal-version:      2.4
name:               patatern
version:            0.1.0.0
synopsis:           Langjam 0002 programming language

-- A longer description of the package.
-- description:
homepage:           github

-- A URL where users can report bugs.
-- bug-reports:
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             Lorenzo Tabacchini, Francesco Magliocca
maintainer:         none

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable patatern
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    SyntaxTree
                    , Instantiate
                    , Evaluate
                    , Builtin
                    , Parser
                    , Interpret

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.0.0
                    , containers
                    , exceptions
                    , haskeline
                    , lens
                    , megaparsec
                    , mtl
                    , text
                    , unify
    hs-source-dirs:   app
    default-language: Haskell2010
