[package]
name = "rematch"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
ariadne = "0.1.3"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
lalrpop-util = { version = "0.19.6", features = ["lexer"] }
paw = "1.0.0"
rustyline = "9.1.0"
structopt = { version = "0.3.25", features = ["paw"] }

[build-dependencies]
lalrpop = "0.19.6"
