[package]
name = "rematch"
version = "0.1.0"
edition = "2021"

[features]

[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
anyhow = "1.0.51"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
env_logger = "0.9.0"
lalrpop-util = { version = "0.19.6", features = ["lexer"] }
log = "0.4.14"
paw = "1.0.0"
rustyline = "9.1.0"
structopt = { version = "0.3.25", features = ["paw"] }
thiserror = "1.0.30"

[dev-dependencies]
static_init = "1.0.0"
